k8s_manifests/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-cloudflare-prod"},"name":"dashboard","namespace":"kube-system"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`traefik.fahmed.org`)","middlewares":[{"name":"oauth-errors","namespace":"oauth2-proxy-app"},{"name":"oauth-auth","namespace":"oauth2-proxy-app"}],"services":[{"kind":"TraefikService","name":"api@internal"}]}]}}
  creationTimestamp: "2025-12-23T03:16:28Z"
  generation: 5
  name: dashboard
  namespace: kube-system
  resourceVersion: "8699294"
  uid: 655a3fb7-6b23-4d74-a08e-b7c3c76152be
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.fahmed.org`)
    middlewares:
    - name: oauth-errors
      namespace: oauth2-proxy-app
    - name: oauth-auth
      namespace: oauth2-proxy-app
    services:
    - kind: TraefikService
      name: api@internal
